# nvidia-failover-lxc

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  FEATURES.md  HANDOFF.md  MEMORY.md  PROXY_README.md  README.md  SESSION_HANDOFF.md  docker-compose.yml  launch_hidden.vbs  launch_router_opencode.bat  launch_router_opencode.ps1  make_shortcut.ps1  nvidia_failover_proxy.py  pyproject.toml  requirements.txt  run_session.py  test_builder.json  test_moe.json  test_request.json  test_stream.json
.github/workflows/: build-installers.yml  docker-publish.yml
app/: branding.py  cascade.py  config.py  db.py  discovery.py  ladder.py  main.py  state.py  stats.py
app/guards/: cjk.py  degenerate.py  stall.py
app/routes/: chat.py  commands.py  config_api.py  dashboard.py  models.py
app/static/: dashboard.css  dashboard.js
app/templates/: dashboard.html.j2
architecture/: agent_communication.md  context_os.md  memory_retrieval.md  roadmap_new.md  roadmap_refined.md  routing_layer.md  unified_endpoint.md
packaging/: icon.icns  nvidia-failover-proxy.desktop  windows-installer.iss
scripts/: README.md  deploy.sh  proxmox-lxc.sh  simple.py
src/: api_server.py  difficulty.py  event_bus.py  hardware.py  llama_backend.py  llm.py  ollama_resolver.py  orchestrator.py  tools.py
src/agents/: base.py  builder.py  planner.py  react_utils.py  reviewer.py
src/providers/: __init__.py  base.py  claude_cli.py  local.py  nvidia.py  router.py
tests/: conftest.py  test_cascade.py  test_discovery.py  test_guards.py  test_ladder_config.py  test_routes.py
